# aws-cognito-auth

./: .gitignore  404.html  GETTING_STARTED.md  IDENTITY_POOL_SETUP.md  Makefile  NO_IDENTITY_POOL.md  PACKAGE_STRUCTURE.md  README.md  README_LAMBDA_SETUP.md  aws_cognito_auth.py  build-packages.sh  cognito_cli.py  deploy_lambda.py  fix_iam_policy.json  identity_pool_setup.py  index.html  lambda_credential_proxy.py  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  quickstart.sh  requirements.txt  role_manager.py  setup.py  setup_iam_user.py  sitemap.xml  test_auth.py  test_auth_debug.py  update_role_trust_policy.py
administration/: index.html
aws-setup/: index.html
configuration/: index.html
docs/: administration.md  aws-setup.md  configuration.md  index.md  installation.md  modules.md  troubleshooting.md  usage.md
installation/: index.html
modules/: index.html
policies/: README.md  cognito-identity-pool-auth-policy.json  dynamodb-user-isolation-policy.json  lambda-invoke-policy.json  lambda-user-policy.json  long-lived-role-trust-policy.json  multi-service.json  s3-access-policy.json  s3-full-bucket.json  s3-user-folders.json  s3-user-isolation-policy.json
search/: search_index.json
src/aws_cognito_auth/: __init__.py  admin.py  client.py  lambda_function.py
tests/: README.md  conftest.py  test_admin.py  test_client.py  test_integration.py  test_utils.py
troubleshooting/: index.html
usage/: index.html
