[project]
name = "aws-cognito-auth"
version = "0.1.0"
description = "AWS Cognito authentication CLI tool for seamless AWS CLI integration"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["aws", "cognito", "authentication", "cli", "credentials"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
]
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.40.2",
    "click>=8.2.1",
]

[project.scripts]
aws-cognito-auth = "aws_cognito_auth:cli"
cognito-cli = "aws_cognito_auth:cli"

[project.urls]
Homepage = "https://github.com/yourusername/aws-cognito-auth"
Repository = "https://github.com/yourusername/aws-cognito-auth"
Documentation = "https://github.com/yourusername/aws-cognito-auth#readme"
"Bug Tracker" = "https://github.com/yourusername/aws-cognito-auth/issues"
